--- a/templates/account/address_add.html.twig
+++ b/templates/account/address_add.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
-{% block title %}Ajouter une adresse - Tomoki
+{% block title %}Ajouter une adresse - TOMOKI
 {% endblock %}
 {% block content %}
 	<div class="container-fluid">
 		<h1 class="text-center p-2 m-3">Gérer mes adresses</h1>
-		<a href="{{path('account')}}" class="btn btn-info col-2">Retour</a>
+		<a href="{{path('account')}}" class="btn btn-btn-outline-info mb-4 col-3">Retour</a>
 		<hr>
 
 		{{form_start(form)}}
@@ -45,4 +45,3 @@
 		{{form_end(form)}}
 	</div>
 {% endblock %}
-
