--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -2,19 +2,34 @@
 {% block title %}Modifier mon mot de passe - Tomoki
 {% endblock %}
 {% block content %}
-	<h1>Modifier mon mot de passe</h1>
-	<br>
-	<a href="{{path('account')}}">Retourner à mon compte</a>
-	<br>
-	<hr>
-	{{ form_start(form) }}
-	{{form_row(form.firstName)}}
-	{{form_row(form.lastName)}}
-	{{ form_row(form.email)}}
-	{{ form_row(form.oldPassword)}}
-	{{ form_row(form.newPassword)}}
-	{{form_row(form.confirmNewPassword)}}
-	{{ form_end(form) }}
-
-	<hr>
+	<div class="container py-5">
+		<h1>Modifier mon mot de passe</h1>
+		<br>
+		<a href="{{ path('account') }}">Retourner à mon compte</a>
+		<br>
+		<hr>
+		{{ form_start(form) }}
+		<div class="mb-3">
+			{{ form_row(form.oldPassword) }}
+		</div>
+		<div class="row mb-3">
+			<div class="col-md-6">
+				{{ form_row(form.firstName) }}
+			</div>
+			<div class="col-md-6">
+				{{ form_row(form.lastName) }}
+			</div>
+		</div>
+		<div class="mb-3">
+			{{ form_row(form.email) }}
+		</div>
+		<div class="mb-3">
+			{{ form_row(form.newPassword) }}
+		</div>
+		<div class="mb-3">
+			{{ form_row(form.confirmNewPassword) }}
+		</div>
+		{{ form_end(form) }}
+		<hr>
+	</div>
 {% endblock %}
