--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,31 +1,27 @@
+<!DOCTYPE html>
 <html lang="fr" data-bs-theme="auto">
 	<head>
-
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="">
-		<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-		<meta name="generator" content="Hugo 0.118.2">
 		<meta name="description" content="{% block meta_description %}{% endblock %}">
 		<title>
 			{% block title %}Bienvenue
 			{% endblock %}
-		</title>
+			- Tomoki</title>
 
 		<link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
 		<link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
 		<link href="{{asset('assets/css/style.min.css')}}" rel="stylesheet">
-		<link rel="stylesheet" href="{{asset('assets/css/style.css')}}"> {% block stylesheet %}{% endblock %}
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512- 1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" cross origin="anonymous" referrerpolicy="no-referrer"/>
+		<link rel="stylesheet" href="{{asset('assets/css/style.css')}}">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512- 1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 	</head>
 	<body>
-
 		<header data-bs-theme="dark">
 			{% include "partials/header.html.twig" %}
 		</header>
 
 		<main>
-		{% block content %}{% endblock %}
+			{% block content %}{% endblock %}
 			{% if block('carrousel') is defined %}
 				<div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
 					<div class="carousel-indicators">
@@ -81,17 +77,15 @@
 					</button>
 				</div>
 			{% endif %}
-			
-
 		</main>
-		<footer class="container-fluid">
+
+		<footer class="footer mt-auto py-3">
 			{% include "partials/footer.html.twig" %}
 		</footer>
 
 		<script src="{{asset('assets/js/jquery-3.7.1.min.js')}}"></script>
 		<script src="{{asset('assets/js/bootstrap.bundle.min.js')}}"></script>
 
-		{% block javascript %}
-		{%endblock%}
+		{% block javascript %}{% endblock %}
 	</body>
 </html>
