--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -4,38 +4,40 @@
 {% endblock %}
 
 {% block content %}
-	<h2>Je passe ma commande</h2>
-	<p>Choisissez vos préférences avant de passer votre commande</p>
-	<hr>
-	<div class="row">
-		<div class="col-md-6">
-			<b>{% set formHTML %}
-				{{form_start(form)}}
-				{{form_end(form)}}
-				{% endset %}
-				{{ formHTML|replace({'[br]': '<br>'}) |raw }}</b><br>
-		</div>
-		<div class="col-md-6">
-			<b>Recap de ma commande</b>
-			{% for product in cart %}
-				<div class="row mt-3">
-					<h3></h3><br>
-					<div class="col-2">
-						<img src="/uploads/{{product.product.illustration}}" alt="{{product.product.name}}" class="img-fluid">
+	<div class="container py-5">
+		<h2>Je passe ma commande</h2>
+		<p>Choisissez vos préférences avant de passer votre commande</p>
+		<hr>
+		<div class="row">
+			<div class="col-md-6">
+				<b>
+					{% set formHTML %}
+					{{ form_start(form) }}
+					{{ form_end(form) }}
+					{% endset %}
+					{{ formHTML|replace({'[br]': '<br>'})|raw }}
+				</b><br>
+			</div>
+			<div class="col-md-6">
+				<b>Recap de ma commande</b>
+				{% for product in cart %}
+					<div class="row mt-3">
+						<div class="col-2">
+							<img src="/uploads/{{ product.product.illustration }}" alt="{{ product.product.name }}" class="img-fluid">
+						</div>
+						<div class="col-4">
+							<strong>{{ product.product.name }}</strong><br>
+							<i>{{ product.product.subtitle }}</i><br>
+						</div>
+						<div class="col-2">
+							<b>{{ (product.product.price / 100) | number_format(2) }}</b><br>
+						</div>
+						<div class="col-2">
+							<i>{{ product.quantity }}</i>
+						</div>
 					</div>
-					<div class="col-2">
-						<strong>{{product.product.name}}</strong><br>
-						<i>{{product.product.subtitle}}</i><br>
-					</div>
-					<div class="col-2">
-						<b>{{(product.product.price / 100) | number_format(2)}}</b><br>
-					</div>
-					<div class="col-2">
-						<i>{{product.quantity}}</i>
-					</div>
-				</div>
-			{% endfor %}
+				{% endfor %}
+			</div>
 		</div>
 	</div>
 {% endblock %}
-
