--- a/templates/order_success/index.html.twig
+++ b/templates/order_success/index.html.twig
@@ -1,25 +1,31 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Ma commande - Tomoki {% endblock %}
-
-{% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-8 offset-md-2">
-            <div class="card border-0 shadow">
-                <div class="card-body">
-                    <h2 class="card-title">Confirmation de commande</h2>
-                    <p class="card-text">Merci M/Mme {{ order.user.firstName }} {{ order.user.lastName }}</p>
-                    <p class="card-text">Nous vous remercions pour votre commande n°: {{ order.reference }}</p>
-                    <p class="card-text">Une confirmation vient d'être envoyé à l'adresse email: {{ order.user.email }}</p>
-                    <p class="card-text">Votre commande sera livrée par {{ order.carrier.name }} à l'adresse suivante:</p>
-                    <p class="card-text">{{ order.delivery | replace({'[br]': '<br>'}) | raw }}</p>
-                    <hr>
-                    <p class="card-text">Pour suivre votre commande rendez-vous dans votre <a href="{{ path('account') }}">Compte</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{% block title %}Ma commande - Tomoki
 {% endblock %}
-
+{% block content %}
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 offset-md-2">
+				<div class="card border-0 shadow">
+					<div class="card-body">
+						<h2 class="card-title">Confirmation de commande</h2>
+						<p class="card-text">Merci M/Mme
+							{{ order.user.firstName }}
+							{{ order.user.lastName }}</p>
+						<p class="card-text">Nous vous remercions pour votre commande n°:
+							{{ order.reference }}</p>
+						<p class="card-text">Une confirmation vient d'être envoyée à l'adresse email:
+							{{ order.user.email }}</p>
+						<p class="card-text">Votre commande sera livrée par
+							{{ order.carrier.name }}
+							à l'adresse suivante:</p>
+						<p class="card-text">{{ order.delivery | replace({'[br]': '<br>'}) | raw }}</p>
+						<hr>
+						<p class="card-text">Pour suivre votre commande, rendez-vous dans votre
+							<a href="{{ path('account') }}">Compte</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endblock %}
