--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,8 +1,11 @@
-<p class="float-end">
-	<a href="#">Back to top</a>
-</p>
-<p>&copy; 2017–2023 Company, Inc. &middot;
-	<a href="#">Privacy</a>
-	&middot;
-	<a href="#">Terms</a>
-</p>
+<div class="container">
+	<p class="float-end">
+		<a href="#" class="text-decoration-none">Back to top</a>
+	</p>
+	<p class="mb-0">
+		&copy; 2017–2023 Company, Inc. &middot;
+		<a href="#" class="text-decoration-none">Privacy</a>
+		&middot;
+		<a href="#" class="text-decoration-none">Terms</a>
+	</p>
+</div>
