mise en place de la gestion des commentaires

--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -3,6 +3,7 @@
 {% endblock %}
 {% block content %}
 	<h1 class="mt-4">Inscription</h1>
+	{#Mettre le nouveau formulaire sur la vue de la page pour améliorer le design du site#}
 	Mon formulaire d'inscription
 	{{form_start(form)}}
 	{{form_row(form.firstName,{'attr':{'title':'Titre avec un minimun de 10 caractères et au maximum 50 caractères'}})}}
