--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -22,25 +22,25 @@
 			<a href="{{ path('products') }}" class="btn btn-secondary">Retour aux produits</a>
 		</div>
 	</div>
-	{% if product.comments| lenght > 0 %}
-		<div class="row">
-			<div class="col-md-5 mb-4 text-center p-2">
-				<h4>Commentaires des utilisateurs</h4>
-			</div>
-			{% for comment in product.comments %}
-				<div class="row alert-light mb-3">
-					<div class="col-md-7 mb-4 my-auto p-2">
-						<strong>{{comment.user.firstName}}
-							{{comment.user.lastName}}</strong>
-						<hr>
-						<blockquote>{{ comment.content | nl2br | striptags('<br><b>') | replace({'&lt;div&gt;':'','&lt;/div&gt;':''}) | raw}}</blockquote>
-						<strong>Note:</strong>
-						{{comment.rating}}
+	{# 	{% if product.comments| lenght > 0 %}
+				<div class="row">
+					<div class="col-md-5 mb-4 text-center p-2">
+						<h4>Commentaires des utilisateurs</h4>
 					</div>
+					{% for comment in product.comments %}
+						<div class="row alert-light mb-3">
+							<div class="col-md-7 mb-4 my-auto p-2">
+								<strong>{{comment.user.firstName}}
+									{{comment.user.lastName}}</strong>
+								<hr>
+								<blockquote>{{ comment.content | nl2br | striptags('<br><b>') | replace({'&lt;div&gt;':'','&lt;/div&gt;':''}) | raw}}</blockquote>
+								<strong>Note:</strong>
+								{{comment.rating}}
+							</div>
+						</div>
+					{% endfor %}
 				</div>
-			{% endfor %}
-		</div>
-
-
-	{% endif %}
+		
+		
+			{% endif %} #}
 {% endblock %}
