--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,20 +1,41 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-	<div class="container py-5">
-		<h1>Mon compte</h1>
-		<p>Bienvenue,
-			{{ app.user.firstName }}. Vous pourrez gérer toutes vos informations personnelles dans cet espace.</p>
-		<div class="row">
-			<div class="col-md-4">
-				<a href="{{ path('account_password') }}" class="btn btn-outline-success btn-lg btn-block my-3">Modifier mon mot de passe</a>
-			</div>
-			<div class="col-md-4">
-				<a href="{{ path('account_address') }}" class="btn btn-outline-success btn-lg btn-block my-3">Gérer mes adresses</a>
-			</div>
-			<div class="col-md-4">
-				<a href="{{ path('account_order') }}" class="btn btn-outline-success btn-lg btn-block my-3">Mes commandes</a>
-			</div>
-		</div>
-	</div>
+<div class="container py-5">
+    <h1 class="mb-4">Mon compte</h1>
+    <p>Bienvenue, {{ app.user.firstName }}. Vous pourrez gérer toutes vos informations personnelles dans cet espace.</p>
+    
+    <div class="row text-center">
+        <div class="col-md-4 mb-3">
+            <div class="card h-100">
+                <div class="card-body">
+                    <i class="fas fa-key fa-2x text-success mb-3"></i>
+                    <h4 class="card-title">Modifier mon mot de passe</h4>
+                    <p class="card-text">Assurez la sécurité de votre compte en mettant à jour régulièrement votre mot de passe.</p>
+                    <a href="{{ path('account_password') }}" class="btn btn-success">Modifier</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <div class="card h-100">
+                <div class="card-body">
+                    <i class="fas fa-map-marker-alt fa-2x text-success mb-3"></i>
+                    <h4 class="card-title">Gérer mes adresses</h4>
+                    <p class="card-text">Mettez à jour vos adresses pour simplifier vos futures commandes et livraisons.</p>
+                    <a href="{{ path('account_address') }}" class="btn btn-success">Gérer</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <div class="card h-100">
+                <div class="card-body">
+                    <i class="fas fa-box fa-2x text-success mb-3"></i>
+                    <h4 class="card-title">Mes commandes</h4>
+                    <p class="card-text">Consultez l’historique de vos commandes et suivez le statut de vos achats récents.</p>
+                    <a href="{{ path('account_order') }}" class="btn btn-success">Consulter</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
