--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -8,7 +8,7 @@
 	<div class="container py-5">
 		<h1>Mon panier</h1>
 		<p>Retrouvez l'ensemble des produits ajoutés au panier</p>
-		<a href="{{ path('products') }}" class="btn btn-success mb-4">Continuer mes achats</a>
+		<a href="{{ path('products') }}" class="btn btn-outline-success mb-4">Continuer mes achats</a>
 		<hr>
 		{% if cart | length > 0 %}
 			<div class="table-responsive">
