--- a/templates/order_success/index.html.twig
+++ b/templates/order_success/index.html.twig
@@ -3,7 +3,7 @@
 {% endblock %}
 {% block content %}
 	<div class="container">
-		<div class="row">
+		<div class="row align-items-center justify-content-center mt-5">
 			<div class="col-md-8 offset-md-2">
 				<div class="card border-0 shadow">
 					<div class="card-body">
