--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -1,33 +1,39 @@
 {% extends 'base.html.twig' %}
+
 {% block title %}Modifier mon mot de passe - Tomoki
 {% endblock %}
+
 {% block content %}
 	<div class="container py-5">
-		<h1>Modifier mon mot de passe</h1>
-		<br>
-		<a href="{{ path('account') }}">Retourner à mon compte</a>
-		<br>
+		<h1 class="mb-4">Modifier mon mot de passe</h1>
+		<div class="mb-3">
+			<a href="{{ path('account') }}" class="btn btn-outline-secondary">Retourner à mon compte</a>
+		</div>
 		<hr>
-		{{ form_start(form) }}
+
+		{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': true}}) }}
 		<div class="mb-3">
-			{{ form_row(form.oldPassword) }}
+			{{ form_row(form.oldPassword, {'attr': {'class': 'form-control'}}) }}
 		</div>
-		<div class="row mb-3">
+		<div class="row">
 			<div class="col-md-6">
-				{{ form_row(form.firstName) }}
+				{{ form_row(form.firstName, {'attr': {'class': 'form-control'}}) }}
 			</div>
 			<div class="col-md-6">
-				{{ form_row(form.lastName) }}
+				{{ form_row(form.lastName, {'attr': {'class': 'form-control'}}) }}
 			</div>
 		</div>
 		<div class="mb-3">
-			{{ form_row(form.email) }}
+			{{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
 		</div>
 		<div class="mb-3">
-			{{ form_row(form.newPassword) }}
+			{{ form_row(form.newPassword, {'attr': {'class': 'form-control'}}) }}
 		</div>
 		<div class="mb-3">
-			{{ form_row(form.confirmNewPassword) }}
+			{{ form_row(form.confirmNewPassword, {'attr': {'class': 'form-control'}}) }}
+		</div>
+		<div class="text-center">
+			{{ form_row(form.submit, {'attr': {'class': 'btn btn-primary'}}) }}
 		</div>
 		{{ form_end(form) }}
 		<hr>
