--- a/templates/account/address_add.html.twig
+++ b/templates/account/address_add.html.twig
@@ -1,47 +1,49 @@
 {% extends 'base.html.twig' %}
+
 {% block title %}Ajouter une adresse - TOMOKI
 {% endblock %}
+
 {% block content %}
-	<div class="container-fluid">
-		<h1 class="text-center p-2 m-3">Gérer mes adresses</h1>
-		<a href="{{path('account')}}" class="btn btn-btn-outline-info mb-4 col-3">Retour</a>
+	<div class="container py-4">
+		<h1 class="text-center mb-4">Gérer mes adresses</h1>
+		<div class="text-center mb-4">
+			<a href="{{ path('account') }}" class="btn btn-outline-info">Retour à votre compte</a>
+		</div>
 		<hr>
 
-		{{form_start(form)}}
-		<div class="row p-2 m-3">
-			<div class="col-12">
-				{{form_row(form.name)}}
+		{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': true}}) }}
+		<div class="row g-3">
+			<div class="col-md-6">
+				{{ form_row(form.name, {'attr': {'class': 'form-control'}}) }}
 			</div>
 			<div class="col-md-6">
-				{{form_row(form.firstName)}}
+				{{ form_row(form.firstName, {'attr': {'class': 'form-control'}}) }}
 			</div>
 			<div class="col-md-6">
-				{{form_row(form.lastName)}}
+				{{ form_row(form.lastName, {'attr': {'class': 'form-control'}}) }}
 			</div>
 			<div class="col-md-6">
-				{{form_row(form.company)}}
+				{{ form_row(form.company, {'attr': {'class': 'form-control'}}) }}
+			</div>
+			<div class="col-md-12">
+				{{ form_row(form.address, {'attr': {'class': 'form-control'}}) }}
 			</div>
 			<div class="col-md-6">
-				{{form_row(form.address)}}
+				{{ form_row(form.postal, {'attr': {'class': 'form-control'}}) }}
 			</div>
 			<div class="col-md-6">
-				{{form_row(form.postal)}}
+				{{ form_row(form.city, {'attr': {'class': 'form-control'}}) }}
 			</div>
 			<div class="col-md-6">
-				{{form_row(form.city)}}
+				{{ form_row(form.country, {'attr': {'class': 'form-control'}}) }}
 			</div>
 			<div class="col-md-6">
-				{{form_row(form.country)}}
-			</div>
-			<div class="col-md-6">
-				{{form_row(form.phone)}}
+				{{ form_row(form.phone, {'attr': {'class': 'form-control'}}) }}
 			</div>
 		</div>
-		<div class="row p-2 m-3">
-			<div class="text-center">
-				{{form_row(form.submit)}}
-			</div>
+		<div class="text-center mt-4">
+			{{ form_row(form.submit, {'attr': {'class': 'btn btn-success'}}) }}
 		</div>
-		{{form_end(form)}}
+		{{ form_end(form) }}
 	</div>
 {% endblock %}
